Revise service offerings and pricing across index and services pages. Updated internet and cable TV service names, descriptions, and prices. Added new business internet tiers and managed security services. Enhanced call-to-action buttons for better user engagement.

--- a/index.html
+++ b/index.html
@@ -174,9 +174,24 @@
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
         <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
           <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-wifi"></i></div>
-          <h3 class="text-xl font-bold text-gray-900">High-Speed Internet</h3>
+          <h3 class="text-xl font-bold text-gray-900">Basic Internet</h3>
+          <p class="mt-2 text-gray-700">Reliable broadband for everyday use.</p>
+          <div class="mt-3 text-neon font-bold text-2xl">$150<span class="text-sm text-gray-600">/month</span></div>
+          <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+            <li><strong>100 Mbps speeds</strong></li>
+            <li>Unlimited data</li>
+            <li>Free modem & installation</li>
+          </ul>
+          <div class="mt-auto pt-6">
+            <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold">Call Now</a>
+          </div>
+        </article>
+
+        <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+          <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-wifi"></i></div>
+          <h3 class="text-xl font-bold text-gray-900">Standard Internet</h3>
           <p class="mt-2 text-gray-700">Fast and reliable broadband for streaming and gaming.</p>
-          <div class="mt-3 text-neon font-bold text-2xl">$49.99<span class="text-sm text-gray-600">/month</span></div>
+          <div class="mt-3 text-neon font-bold text-2xl">$250<span class="text-sm text-gray-600">/month</span></div>
           <ul class="mt-4 space-y-2 text-gray-700 text-sm">
             <li><strong>200+ Mbps speeds</strong></li>
             <li>Unlimited data</li>
@@ -188,14 +203,44 @@
         </article>
 
         <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
-          <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-tv"></i></div>
-          <h3 class="text-xl font-bold text-gray-900">Cable TV Services</h3>
-          <p class="mt-2 text-gray-700">Premium entertainment with 100+ channels.</p>
-          <div class="mt-3 text-neon font-bold text-2xl">$79.99<span class="text-sm text-gray-600">/month</span></div>
+          <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-wifi"></i></div>
+          <h3 class="text-xl font-bold text-gray-900">Premium Internet</h3>
+          <p class="mt-2 text-gray-700">Ultra-fast speeds for power users and families.</p>
+          <div class="mt-3 text-neon font-bold text-2xl">$400<span class="text-sm text-gray-600">/month</span></div>
           <ul class="mt-4 space-y-2 text-gray-700 text-sm">
-            <li><strong>100+ HD Channels</strong></li>
-            <li>DVR Recording (200 hrs)</li>
+            <li><strong>500+ Mbps speeds</strong></li>
+            <li>Unlimited data</li>
+            <li>Premium router included</li>
+          </ul>
+          <div class="mt-auto pt-6">
+            <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold">Call Now</a>
+          </div>
+        </article>
+
+        <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+          <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-tv"></i></div>
+          <h3 class="text-xl font-bold text-gray-900">Cable TV Basic</h3>
+          <p class="mt-2 text-gray-700">Essential entertainment with popular channels.</p>
+          <div class="mt-3 text-neon font-bold text-2xl">$200<span class="text-sm text-gray-600">/month</span></div>
+          <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+            <li><strong>70+ HD Channels</strong></li>
+            <li>DVR Recording (100 hrs)</li>
             <li>On-Demand Programs</li>
+          </ul>
+          <div class="mt-auto pt-6">
+            <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold">Call Now</a>
+          </div>
+        </article>
+
+        <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+          <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-tv"></i></div>
+          <h3 class="text-xl font-bold text-gray-900">Cable TV Premium</h3>
+          <p class="mt-2 text-gray-700">Premium entertainment with 150+ channels.</p>
+          <div class="mt-3 text-neon font-bold text-2xl">$350<span class="text-sm text-gray-600">/month</span></div>
+          <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+            <li><strong>150+ HD Channels</strong></li>
+            <li>DVR Recording (300 hrs)</li>
+            <li>Premium movie channels</li>
           </ul>
           <div class="mt-auto pt-6">
             <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold">Call Now</a>
@@ -206,7 +251,7 @@
           <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-phone"></i></div>
           <h3 class="text-xl font-bold text-gray-900">Home Phone Service</h3>
           <p class="mt-2 text-gray-700">Clear calling with nationwide & international options.</p>
-          <div class="mt-3 text-neon font-bold text-2xl">$29.99<span class="text-sm text-gray-600">/month</span></div>
+          <div class="mt-3 text-neon font-bold text-2xl">$150<span class="text-sm text-gray-600">/month</span></div>
           <ul class="mt-4 space-y-2 text-gray-700 text-sm">
             <li><strong>Unlimited Local Calls</strong></li>
             <li>Nationwide coverage</li>
@@ -219,9 +264,9 @@
 
         <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
           <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-network-wired"></i></div>
-          <h3 class="text-xl font-bold text-gray-900">Business Internet</h3>
-          <p class="mt-2 text-gray-700">Dedicated connections for business growth.</p>
-          <div class="mt-3 text-neon font-bold text-2xl">Custom Pricing</div>
+          <h3 class="text-xl font-bold text-gray-900">Business Internet Starter</h3>
+          <p class="mt-2 text-gray-700">Dedicated connections for small businesses.</p>
+          <div class="mt-3 text-neon font-bold text-2xl">$500<span class="text-sm text-gray-600">/month</span></div>
           <ul class="mt-4 space-y-2 text-gray-700 text-sm">
             <li><strong>Fiber & Dedicated Lines</strong></li>
             <li>Business-grade support</li>
@@ -233,14 +278,59 @@
         </article>
 
         <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+          <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-network-wired"></i></div>
+          <h3 class="text-xl font-bold text-gray-900">Business Internet Pro</h3>
+          <p class="mt-2 text-gray-700">High-performance connectivity for growing businesses.</p>
+          <div class="mt-3 text-neon font-bold text-2xl">$750<span class="text-sm text-gray-600">/month</span></div>
+          <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+            <li><strong>Gigabit Fiber Lines</strong></li>
+            <li>Priority support 24/7</li>
+            <li>99.9% Uptime SLA</li>
+          </ul>
+          <div class="mt-auto pt-6">
+            <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold">Call Now</a>
+          </div>
+        </article>
+
+        <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+          <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-network-wired"></i></div>
+          <h3 class="text-xl font-bold text-gray-900">Business Internet Enterprise</h3>
+          <p class="mt-2 text-gray-700">Enterprise-grade solutions for large organizations.</p>
+          <div class="mt-3 text-neon font-bold text-2xl">$1000<span class="text-sm text-gray-600">/month</span></div>
+          <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+            <li><strong>Multi-Gigabit Fiber</strong></li>
+            <li>Dedicated account manager</li>
+            <li>99.99% Uptime SLA</li>
+          </ul>
+          <div class="mt-auto pt-6">
+            <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold">Call Now</a>
+          </div>
+        </article>
+
+        <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
           <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-satellite"></i></div>
           <h3 class="text-xl font-bold text-gray-900">Satellite Internet</h3>
           <p class="mt-2 text-gray-700">Coverage anywhere, even remote areas.</p>
-          <div class="mt-3 text-neon font-bold text-2xl">$59.99<span class="text-sm text-gray-600">/month</span></div>
+          <div class="mt-3 text-neon font-bold text-2xl">$300<span class="text-sm text-gray-600">/month</span></div>
           <ul class="mt-4 space-y-2 text-gray-700 text-sm">
             <li><strong>No line-of-sight needed</strong></li>
             <li>Rural & remote areas</li>
             <li>Fixed wireless option</li>
+          </ul>
+          <div class="mt-auto pt-6">
+            <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold">Call Now</a>
+          </div>
+        </article>
+
+        <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+          <div class="text-neon text-3xl mb-4"><i class="fa-solid fa-shield-halved"></i></div>
+          <h3 class="text-xl font-bold text-gray-900">Managed Security Services</h3>
+          <p class="mt-2 text-gray-700">Advanced cybersecurity for your network.</p>
+          <div class="mt-3 text-neon font-bold text-2xl">$450<span class="text-sm text-gray-600">/month</span></div>
+          <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+            <li><strong>24/7 Threat Monitoring</strong></li>
+            <li>Firewall & VPN included</li>
+            <li>Security updates</li>
           </ul>
           <div class="mt-auto pt-6">
             <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold">Call Now</a>
