--- a/services.html
+++ b/services.html
@@ -63,10 +63,27 @@
 
       <section class="py-20">
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
-          <!-- Service 1: High-Speed Internet -->
+          <!-- Service 1: Basic Internet -->
           <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
             <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-wifi"></i></div>
-            <h3 class="text-2xl font-bold text-gray-900">High-Speed Internet</h3>
+            <h3 class="text-2xl font-bold text-gray-900">Basic Internet</h3>
+            <p class="mt-2 text-gray-700">Reliable broadband for everyday use.</p>
+            <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+              <li><strong>✓ 100 Mbps speeds</strong></li>
+              <li>Unlimited data usage</li>
+              <li>Free modem & installation</li>
+              <li>24/7 technical support</li>
+            </ul>
+            <div class="mt-auto pt-6">
+              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$150/mo</strong></p>
+              <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold inline-block">Get Connected</a>
+            </div>
+          </article>
+
+          <!-- Service 2: Standard Internet -->
+          <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+            <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-wifi"></i></div>
+            <h3 class="text-2xl font-bold text-gray-900">Standard Internet</h3>
             <p class="mt-2 text-gray-700">Blazing fast broadband for streaming, gaming & work.</p>
             <ul class="mt-4 space-y-2 text-gray-700 text-sm">
               <li><strong>✓ 200+ Mbps speeds</strong></li>
@@ -75,29 +92,63 @@
               <li>24/7 technical support</li>
             </ul>
             <div class="mt-auto pt-6">
-              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$49.99/mo</strong></p>
+              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$250/mo</strong></p>
               <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold inline-block">Get Connected</a>
             </div>
           </article>
 
-          <!-- Service 2: Cable TV -->
+          <!-- Service 3: Premium Internet -->
           <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
-            <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-tv"></i></div>
-            <h3 class="text-2xl font-bold text-gray-900">Cable TV & Entertainment</h3>
-            <p class="mt-2 text-gray-700">Premium channels with crystal-clear HD picture quality.</p>
+            <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-wifi"></i></div>
+            <h3 class="text-2xl font-bold text-gray-900">Premium Internet</h3>
+            <p class="mt-2 text-gray-700">Ultra-fast speeds for power users and families.</p>
             <ul class="mt-4 space-y-2 text-gray-700 text-sm">
-              <li><strong>✓ 100+ HD Channels</strong></li>
-              <li>DVR recording (200 hrs)</li>
-              <li>On-Demand programs</li>
-              <li>Sports & movie packages</li>
+              <li><strong>✓ 500+ Mbps speeds</strong></li>
+              <li>Unlimited data usage</li>
+              <li>Premium router included</li>
+              <li>Priority support 24/7</li>
             </ul>
             <div class="mt-auto pt-6">
-              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$79.99/mo</strong></p>
+              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$400/mo</strong></p>
+              <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold inline-block">Get Connected</a>
+            </div>
+          </article>
+
+          <!-- Service 4: Cable TV Basic -->
+          <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+            <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-tv"></i></div>
+            <h3 class="text-2xl font-bold text-gray-900">Cable TV Basic</h3>
+            <p class="mt-2 text-gray-700">Essential entertainment with popular channels.</p>
+            <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+              <li><strong>✓ 70+ HD Channels</strong></li>
+              <li>DVR recording (100 hrs)</li>
+              <li>On-Demand programs</li>
+              <li>Basic sports packages</li>
+            </ul>
+            <div class="mt-auto pt-6">
+              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$200/mo</strong></p>
               <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold inline-block">Learn More</a>
             </div>
           </article>
 
-          <!-- Service 3: Home Phone -->
+          <!-- Service 5: Cable TV Premium -->
+          <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+            <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-tv"></i></div>
+            <h3 class="text-2xl font-bold text-gray-900">Cable TV Premium</h3>
+            <p class="mt-2 text-gray-700">Premium channels with crystal-clear HD picture quality.</p>
+            <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+              <li><strong>✓ 150+ HD Channels</strong></li>
+              <li>DVR recording (300 hrs)</li>
+              <li>Premium movie channels</li>
+              <li>Sports & movie packages</li>
+            </ul>
+            <div class="mt-auto pt-6">
+              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$350/mo</strong></p>
+              <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold inline-block">Learn More</a>
+            </div>
+          </article>
+
+          <!-- Service 6: Home Phone -->
           <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
             <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-phone"></i></div>
             <h3 class="text-2xl font-bold text-gray-900">Home Phone Service</h3>
@@ -109,16 +160,16 @@
               <li>Emergency services ready</li>
             </ul>
             <div class="mt-auto pt-6">
-              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$29.99/mo</strong></p>
+              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$150/mo</strong></p>
               <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold inline-block">Connect Today</a>
             </div>
           </article>
 
-          <!-- Service 4: Business Internet -->
+          <!-- Service 7: Business Internet Starter -->
           <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
             <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-network-wired"></i></div>
-            <h3 class="text-2xl font-bold text-gray-900">Business Internet</h3>
-            <p class="mt-2 text-gray-700">Dedicated connections for your business needs.</p>
+            <h3 class="text-2xl font-bold text-gray-900">Business Internet Starter</h3>
+            <p class="mt-2 text-gray-700">Dedicated connections for small businesses.</p>
             <ul class="mt-4 space-y-2 text-gray-700 text-sm">
               <li><strong>✓ Fiber & Dedicated Lines</strong></li>
               <li>Business-grade support</li>
@@ -126,12 +177,46 @@
               <li>Priority speeds & reliability</li>
             </ul>
             <div class="mt-auto pt-6">
-              <p class="text-sm text-gray-600 mb-3">Custom pricing available</p>
+              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$500/mo</strong></p>
               <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold inline-block">Request Quote</a>
             </div>
           </article>
 
-          <!-- Service 5: Satellite Internet -->
+          <!-- Service 8: Business Internet Pro -->
+          <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+            <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-network-wired"></i></div>
+            <h3 class="text-2xl font-bold text-gray-900">Business Internet Pro</h3>
+            <p class="mt-2 text-gray-700">High-performance connectivity for growing businesses.</p>
+            <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+              <li><strong>✓ Gigabit Fiber Lines</strong></li>
+              <li>Priority support 24/7</li>
+              <li>99.9% Uptime SLA</li>
+              <li>Dedicated account manager</li>
+            </ul>
+            <div class="mt-auto pt-6">
+              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$750/mo</strong></p>
+              <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold inline-block">Request Quote</a>
+            </div>
+          </article>
+
+          <!-- Service 9: Business Internet Enterprise -->
+          <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+            <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-network-wired"></i></div>
+            <h3 class="text-2xl font-bold text-gray-900">Business Internet Enterprise</h3>
+            <p class="mt-2 text-gray-700">Enterprise-grade solutions for large organizations.</p>
+            <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+              <li><strong>✓ Multi-Gigabit Fiber</strong></li>
+              <li>Dedicated account manager</li>
+              <li>99.99% Uptime SLA</li>
+              <li>Custom solutions available</li>
+            </ul>
+            <div class="mt-auto pt-6">
+              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$1000/mo</strong></p>
+              <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold inline-block">Request Quote</a>
+            </div>
+          </article>
+
+          <!-- Service 10: Satellite Internet -->
           <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
             <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-satellite"></i></div>
             <h3 class="text-2xl font-bold text-gray-900">Satellite Internet</h3>
@@ -143,12 +228,29 @@
               <li>Always-on connectivity</li>
             </ul>
             <div class="mt-auto pt-6">
-              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$59.99/mo</strong></p>
+              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$300/mo</strong></p>
               <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold inline-block">Check Coverage</a>
             </div>
           </article>
 
-          <!-- Service 6: Bundles -->
+          <!-- Service 11: Managed Security Services -->
+          <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg">
+            <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-shield-halved"></i></div>
+            <h3 class="text-2xl font-bold text-gray-900">Managed Security Services</h3>
+            <p class="mt-2 text-gray-700">Advanced cybersecurity for your network.</p>
+            <ul class="mt-4 space-y-2 text-gray-700 text-sm">
+              <li><strong>✓ 24/7 Threat Monitoring</strong></li>
+              <li>Firewall & VPN included</li>
+              <li>Security updates</li>
+              <li>Expert security team</li>
+            </ul>
+            <div class="mt-auto pt-6">
+              <p class="text-sm text-gray-600 mb-3">Starting from <strong>$450/mo</strong></p>
+              <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold inline-block">Learn More</a>
+            </div>
+          </article>
+
+          <!-- Service 12: Bundles -->
           <article class="card3d p-6 rounded-2xl bg-white border border-gray-300 flex flex-col hover:shadow-lg bg-gradient-to-br from-blue-50">
             <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-box"></i></div>
             <h3 class="text-2xl font-bold text-gray-900">Bundle Deals</h3>
